tests/ui/traits/project-modulo-regions.with_clause.stderr
error: evaluate(Binder { value: TraitPredicate(<Helper as HelperTrait>, polarity:Positive), bound_vars: [] }) = Ok(EvaluatedToOkModuloRegions)
  --> $DIR/project-modulo-regions.rs:50:5
   |
LL | fn test(val: MyStruct) where Helper: HelperTrait  {
   |                                      ----------- predicate
...
LL |     test(val);
   |     ^^^^

error: aborting due to previous error

